--- a/readme.html
+++ b/readme.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p>Git is a version control system.</p>
+<p>Git is a distributed version control system.</p>
 <p>Git is free software.</p>
 </body>
 </html>
