--- a/readme.html
+++ b/readme.html
@@ -7,6 +7,6 @@
 
 <body>
 <p>Git is a distributed version control system.</p>
-<p>Git is free software.</p>
+<p>Git is free software distributed under the GPL.</p>
 </body>
 </html>
