understand how stage works

--- a/readme.html
+++ b/readme.html
@@ -8,5 +8,6 @@
 <body>
 <p>Git is a distributed version control system.</p>
 <p>Git is free software distributed under the GPL.</p>
+<p>Git has a mutable index called stage.</p>
 </body>
 </html>
