--- a/readme.html
+++ b/readme.html
@@ -9,5 +9,6 @@
 <p>Git is a distributed version control system.</p>
 <p>Git is free software distributed under the GPL.</p>
 <p>Git has a mutable index called stage.</p>
+<p>Git tracks changes.</p>
 </body>
 </html>
